--- a/style.css
+++ b/style.css
@@ -16,13 +16,15 @@ body
 {
     text-align:right;
     color: green;
-    background-color:whitesmoke;
+    background-color: white;
 }
 .menu-bar ul 
 {
+    background-color: whitesmoke;
     display: inline-flex;
     list-style: none;
-    color: #fff
+    color: green;
+    
 }
 .menu-bar ul li
 {
@@ -37,7 +39,7 @@ body
 }
 .active,.menu-bar ul li:hover 
 {
-    background: lime;
+    background:green;
     border-radius: 3px;
 }
 .menu-bar .fa
