--- a/style.css
+++ b/style.css
@@ -47,14 +47,19 @@ body
     padding: 15px;
 }
 .menu-bar ul li a
-{
+{   
     text-decoration: none;
     color: green;
-    padding-top: 40px;
+    width: 50px;
+    font-weight: bolder;
+    font-size: medium;
+    
+}
+.menu-bar ul li a:hover{
+  color: darkgrey;
 }
 .active,.menu-bar ul li:hover 
 {
-    background:rgb(247, 245, 245);
     border-radius: 3px;
     z-index: index 999;;
 }
@@ -127,72 +132,22 @@ body
     display: flex;
     flex-wrap: wrap;
   }
-  .fakeimg {
-    background-color: darkgreen;
-    width: 100%;
-    padding: 10px;
-    background-image: url(img1.jpg);
-  }
-  .slider-wrapper .image-list{
-    background-color:grey;
-    display: grid;
-    gap: 1px;
-    font-size: 0;
-    margin-bottom: 30px;
-    overflow-x: auto;
-    scrollbar-width: none;
-    grid-template-columns: repeat(10,1fr);
-  }
-  .slider-wrapper .image-list::-webkit-scrollbar{
-    display: none;
-  }
-  .container{
-    max-width: 1200px;
-    width: 95% ; 
-  }
-
-  .slider-wrapper .image-list .image-item{
-    width: 325px;
-    height: 400px;
-    object-fit: cover;
-  }
-
-  .container .slider-scrollbar{
-    height: 24px;
-    width: 100%;
-    background:  white;
+  .container{width: 100%;
+    height: 100vh;
+    background: whitesmoke; 
     display: flex;
     align-items: center;
+    justify-content: center;
   }
+  .swiper{
+    width: 80%;
+    height: fit-content;
+  }
+  .swiper-slide img{
+    width: 100%;
 
-.slider-scrollbar .scrolbar-track{
-  height: 2px;
-  width: 100%;
-  background: #ccc;
-  position: relative;
-  border-radius: 4px;
-}
-.slider-scrollbar .scrolbar-thumb{
-  position: absolute;
-  height: 100px;
-  width: 50%;
-  background: #000; 
-  border-radius: inherit;
-  cursor: grab;
-}
-.slider-scrollbar .scrolbar-track:active{
-  cursor: grabbing;
-  height: 8px;
-  top: 2px;
-}
-.slider-scrollbar .scrolbar-thumb ::after{
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: -10px;
-  bottom: -10px;
-}
+  }
+  
 @media screen (max-width:500px;) {
   .menu-bar{
     justify-content: center;
