I added services menu

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ body
     background-color: white;
     justify-content: center;
     display: flex;
+    margin-top: 2px;
   }
   article{
     color: white;
@@ -167,6 +168,30 @@ body
 }
 .middle p{
   padding-bottom: 20px;
+}
+.wrapper{
+  background-color: white;
+  width: 100%;
+  height: 50vh;
+}
+.wrapper img{
+  display: inline-flex;
+  width: 270px;
+  height: 30vh;
+  margin-left: 5px;
+  margin-top: 20px;
+  padding-right: 10px;
+  padding-left: 15px;
+  border-radius: 80px;
+  list-style: none;
+  align-items: center;
+}
+.wrapper h4{
+  text-align: center;
+  font-weight: bolder;
+  font-size: 50px;
+  font-style: normal;
+  font-family:Arial,;
 }
   
 @media screen (max-width:500px;) {
