--- a/style.css
+++ b/style.css
@@ -183,8 +183,8 @@ body
   padding-right: 10px;
   padding-left: 15px;
   border-radius: 80px;
-  list-style: none;
-  align-items: center;
+  align-content: flex-start;
+  flex-wrap: wrap;
 }
 .wrapper h4{
   text-align: center;
