--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: o;
     margin: 0;
     box-sizing: border-box;
+
 }
 
 body
@@ -10,11 +11,11 @@ body
     background-size: cover;
     font-family: sans-serif;
     background-position: center;
-    background-color: whitesmoke;
+    background-color: white;
 }
 .menu-bar
 {  
-    text-align: center;
+    text-align: right;
     color:white;
     background: rgb(246, 248, 246);
     border-bottom:5px  solid whitesmoke;
@@ -26,10 +27,11 @@ body
 }
 .logo{
   float: left;
-  width: 70px;
+  width: 80px;
   margin: 30px;
   margin-bottom: 10px;
   margin-top: 10px;
+  border-radius: 100px;
 
 }
 .menu-bar ul 
@@ -105,13 +107,15 @@ body
     color: white; 
     width: auto;
     border-radius: 10px;
+    height: 30vh;
   }
   .header h1 {
     font-size: 50px;
     border-bottom: 50px;
   }
   .container{width: 100%;
-    height: 60vh;
+    height: 55vh;
+    margin-top: 10px;
     background: white; 
     display: flex;
     align-items: center;
@@ -148,7 +152,7 @@ body
     width: 20%;
     padding-left: 10px;
     border: 1px solid white;
-    height: 30vh;
+    height: 35vh;
   }
   article h2{
     font-size: 30px;
@@ -157,6 +161,7 @@ body
   }
   article p{
     padding-bottom: 20px;
+    font-size: 20px;
   }
   .middle{
     background-color: rgb(118, 152, 67);
@@ -186,13 +191,37 @@ body
   align-content: flex-start;
   flex-wrap: wrap;
 }
-.wrapper h4{
-  text-align: center;
-  font-weight: bolder;
-  font-size: 50px;
+
+.kode-mono-uniquifier{
+  font-family: "Kode Mono", monospace;
+  font-optical-sizing: auto;
   font-style: normal;
-  font-family:Arial,;
+  color: green;
+  text-align: center;
+  font-weight: 700;
+  font-size: 65px;
 }
+.wrapper article{
+  text-align: center;
+  background-color: white;
+  display: inline-block;
+  width: 300px;
+  margin: 30px
+
+  
+}
+.wrapper article h5{
+  color: rgb(63, 162, 70);
+  text-align: center;
+  font-size: larger;
+  font-weight: bolder;
+  
+}
+.wrapper article p{
+  color: green;
+  text-align: center;
+}
+
   
 @media screen (max-width:500px;) {
   menu-bar{
