--- a/style.css
+++ b/style.css
@@ -236,13 +236,18 @@ footer .wallpaper{
 }
 .row .logol img{
   border-radius: 85px;
+  margin-right: 30px;
 
 }
 .footer .footer-colomn ul{
   list-style: none;
 }
+
 .footer-colomn3 .text-box p{
   font-size: larger;
+  display: inline-block;
+  color: whitesmoke;
+  margin-top: 20px;
 }
 .footer-colomn h6{
   color: whitesmoke;
@@ -251,6 +256,13 @@ footer .wallpaper{
   font-style: 22px;
   position: relative;
   font-family: Arial, Helvetica, sans-serif;
+}
+.footer-colomn3 .text-box h7{
+  color: rgb(8, 66, 8);
+  font-size: larger;
+  font-size: 50px;
+  
+
 }
 .footer-colomn h6::before{
   content: '';
