--- a/style.css
+++ b/style.css
@@ -107,11 +107,11 @@ body
     color: white; 
     width: auto;
     border-radius: 10px;
-    height: 30vh;
+    height: 20vh;
   }
   .header h1 {
     font-size: 50px;
-    border-bottom: 50px;
+    border-bottom: 3px;
   }
   .container{width: 100%;
     height: 55vh;
@@ -125,7 +125,7 @@ body
   .swiper{
     width: 100%;
     height: fit-content;
-    margin-top: 100px;
+    margin-top: 120px;
   }
   .swiper-slide img{
     width: 100%;
@@ -142,7 +142,7 @@ body
     background-color: white;
     justify-content: center;
     display: flex;
-    margin-top: 2px;
+    margin-top: 20px;
     margin-bottom: 70px;
   }
   article{
@@ -159,6 +159,7 @@ body
     font-size: 30px;
     text-align: center;
     padding-top: 10px;
+    padding-bottom: 10px;
   }
   article p{
     padding-bottom: 20px;
@@ -171,6 +172,7 @@ body
   text-align: center;
   font-size: 30px;
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 .middle p{
   padding-bottom: 20px;
@@ -235,9 +237,12 @@ footer .wallpaper{
   padding: 40px 80px;
 }
 .row .logol img{
-  border-radius: 85px;
+  width: 120px;
+  border-radius: 100px;
   margin-right: 30px;
-
+}
+.row .logol p{
+  color: whitesmoke;
 }
 .footer .footer-colomn ul{
   list-style: none;
@@ -260,7 +265,7 @@ footer .wallpaper{
 .footer-colomn3 .text-box h7{
   color: rgb(8, 66, 8);
   font-size: larger;
-  font-size: 50px;
+  font-size: 45px;
   
 
 }
@@ -298,11 +303,14 @@ footer .wallpaper{
   border: none;
   color: white;
 }
-.col p{
+.row .col p{
   color: white;
+  text-align: center;
+  
 }
 .row hr{
-  opacity: 0.7;
+  opacity: 0.7s;
+  
 }
 .row .socialIcons i{
   display: inline-block;
